# draw_palette

./: .editorconfig  .gitignore  .pylintrc  Makefile  README.md  colors.lua  main.py  plot-palette.py  plot_palette.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
draw_palette/: __init__.py  config.py  drawer.py  utils.py
example/: example.py
plotpalette/: __init__.py  config.py  plotter.py  utils.py
