[project]
name = "draw_palette"
version = "0.3"
authors = [{ name = "Roman Averin", email = "mail@romanaverin.com" }]
description = "Simple package for rendering image plate a color scheme palette of neovim or anything else"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Utilities",
  "Topic :: Multimedia :: Graphics",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = ["matplotlib==3.10.1", "lupa==2.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pylint>=3.3.5", "uv>=0.6.6"]

[project.urls]
Homepage = "https://github.com/romanaverin/draw_palette"
Issues = "https://github.com/romanaverin/draw_palette/issues"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
